--- a/experience.html
+++ b/experience.html
@@ -22,8 +22,9 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="about.html">A propos de moi</a></li>
             <li><a href="experience.html">Expérience</a></li>
-
             <li><a href="projets.html">Projets</a></li>
+            <li><a href="micro.html">Stage 1</a></li>
+            <li><a href="chateau9.html">Stage 2</a></li>
             <li><a href="vielle.html">Veille</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -66,7 +67,7 @@
                                             bases de données, modélisation, etc.</p>
 
                                         </p>
-                                        <btn class="btn">Voir le diplôme</btn>
+                                        <!--<btn class="btn">Voir le diplôme</btn>-->
                                     </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
@@ -105,7 +106,7 @@
                                             <br>
                                             <i><strong>Limoges, France</strong></i>
                                         </p>
-                                        <button class="btn">Voir le diplôme</button>
+                                        <btn class="btn">Voir le diplôme</btn>
                                     </div>
 
 
@@ -127,7 +128,6 @@
                                         <h4 class="timeline-title">Chateau9</h4>
                                         <i><strong>Chateauneuf-la-forêt, France</strong></i>
                                         <p class="timeline-text">Développement web</p>
-                                        <btn class="btn">Savoir plus</btn>
                                     </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
@@ -138,7 +138,6 @@
                                         <h4 class="timeline-title">Ordipointcom</h4>
                                         <i><strong>Limoges, France</strong></i>
                                         <p class="timeline-text">Développement web</p>
-                                        <button class="btn">Savoir plus</button>
                                     </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
@@ -149,7 +148,6 @@
                                         <h4 class="timeline-title">Région Nouvelle-Aquitaine</h4>
                                         <i><strong>Limoges, France</strong></i>
                                         <p class="timeline-text">Maintenance et réseau</p>
-                                        <button class="btn">Savoir plus</button>
                                     </div>
                                     <!-- ==== timeline item ==== -->
                                     <div class="timeline-item">
@@ -195,8 +193,6 @@
                                 </div>
                             </div>
                         </div>
-
-
                     </div>
                 </div>
             </div>
