--- a/chateau9.html
+++ b/chateau9.html
@@ -4,16 +4,14 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="style-menu.css">
 
     <title>Portfolio</title>
 </head>
 <body>
 <section>
-    <a class="logo" target="_blank">
-        <img src="images/logo.png" alt="">
-    </a>
+
 
     <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
     <label for="menu-icon"></label>
@@ -25,20 +23,29 @@
             <li><a href="experience.html">Expérience</a></li>
 
             <li><a href="projets.html">Projets</a></li>
+            <li><a href="micro.html">Stage 1</a></li>
+            <li><a href="chateau9.html">Stage 2</a></li>
             <li><a href="vielle.html">Veille</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </section>
-        
+
+<div class="main-contenet">
+    <div class="container">
+        <div class="row">
+            <div class="section-title padd-15">
+        <h1>Fatima ABOUDA</h1>
+        <h2>Stage Chateau9</h2>
+
         <section>
             <h1>Chateau9</h1>
             <h2>Création des sites WEB</h2>
             <p>Chateau9 est une entreprise qui propose des services de création de sites web, de référencement et de
                 marketing digital. Elle est située à Chateauneuf la fôret.</p>
-<p>Le site web est un outil de communication indispensable pour une entreprise. Il permet de présenter
-    l’entreprise, ses produits et services, de communiquer sur ses actualités, de générer des contacts et des
-    ventes. Il est donc important de bien le concevoir et de le faire évoluer régulièrement.</p>
+                <p>Le site web est un outil de communication indispensable pour une entreprise. Il permet de présenter
+                    l’entreprise, ses produits et services, de communiquer sur ses actualités, de générer des contacts et des
+                    ventes. Il est donc important de bien le concevoir et de le faire évoluer régulièrement.</p>
             <h2>Objectifs :</h2>
             <ul>
                 <li>Créer un site web pour l’entreprise Chateau9</li>
@@ -66,6 +73,8 @@
                 <li>PhpMyAdmin</li>
                 <li>FileZilla</li>
                 <li>WampServer</li>
+                <li>WordPress</li>
+                <li>Joomla</li>
             </ul>
             <h2>Les étapes de réalisation :</h2>
             <ol>
@@ -95,6 +104,7 @@
             <h2>Le déploiement :</h2>
             <p>Le déploiement est la mise en ligne du site web. Il permet de rendre le site accessible aux utilisateurs
                 sur internet.</p>
+            <btn class="btn" href="resources/doctechnique.pdf">Projet</btn>
             <h2>Conclusion :</h2>
             <p>Le stage s’est bien déroulé. J’ai réussi à atteindre les objectifs demandés. J’ai appris à travailler en
                 autonomie. J’ai également appris à utiliser de nouvelles technologies.</p>
@@ -124,4 +134,5 @@
             1!3m3!1m2!1s0x47fcbf1b0b0b0b0b%3A0x9e9b6b0b0b0b0b0!2s2%20Avenue%20du%2011%20Novembre%201918%2C%2087130%20Ch%C3%A2teauneuf-la-For%C3%AAt!5e0!3m2!1sfr!2sfr!4v1622124114119!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <br><br>
         </section>
+</div>
     </body>
