--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,8 @@
             <li><a href="about.html">A propos de moi</a></li>
             <li><a href="experience.html">Expérience</a></li>
             <li><a href="projets.html">Projets</a></li>
+            <li><a href="micro.html">Stage 1</a></li>
+            <li><a href="chateau9.html">Stage 2</a></li>
             <li><a href="vielle.html">Veille</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
