--- a/chateau9.html
+++ b/chateau9.html
@@ -10,7 +10,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-<section>
+<section >
 
 
     <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
@@ -23,7 +23,7 @@
             <li><a href="experience.html">Expérience</a></li>
 
             <li><a href="projets.html">Projets</a></li>
-            <li><a href="micro.html">Stage 1</a></li>
+            <li><a href="ordi.html">Stage 1</a></li>
             <li><a href="chateau9.html">Stage 2</a></li>
             <li><a href="vielle.html">Veille</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -31,7 +31,7 @@
     </nav>
 </section>
 
-<div class="main-contenet">
+<div class="main-contenet section">
     <div class="container">
         <div class="row">
             <div class="section-title padd-15">
@@ -52,59 +52,34 @@
                 <li>Présenter l’entreprise, ses services et ses réalisations</li>
                 <li>Permettre aux clients de contacter l’entreprise</li>
             </ul>
-            <h2>Contraintes :</h2>
+            <h2>Contexte :</h2>
+            <p>Dans le cadre de ma formation de BTS SIO, j’ai effectué un stage de 4 semaines au sein de l’entreprise
+                Chateau9. Ce stage a pour but de mettre en pratique les connaissances acquises au cours de ma formation et
+                de découvrir le monde professionnel.</p>
+            <h2>Objectifs du stage :</h2>
             <ul>
-                <li>Le site doit être responsive</li>
-                <li>Le site doit être optimisé pour le référencement naturel</li>
-                <li>Le site doit être sécurisé</li>
-                <li>Le site doit être facilement administrable</li>
+                <li>Pratiquer les connaissances acquises au cours de ma formation</li>
+                <li>Découvrir le monde professionnel</li>
+                <li>Acquérir de nouvelles compétences</li>
+                <li>Comprendre le fonctionnement d’une entreprise</li>
+                <li>Comprendre le fonctionnement d’un service informatique</li>
             </ul>
-            <h2>Technologies utilisées :</h2>
-            <ul>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JavaScript</li>
-                <li>PHP</li>
-                <li>MySQL</li>
-                <li>Bootstrap</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>Visual Studio Code</li>
-                <li>PhpMyAdmin</li>
-                <li>FileZilla</li>
-                <li>WampServer</li>
-                <li>WordPress</li>
-                <li>Joomla</li>
-            </ul>
+            <h2>Présentation de l’entreprise :</h2>
+            <p>Chateau9 est une entreprise qui propose des services de création de sites web, de référencement et de
+                marketing digital. Elle est située à Chateauneuf la fôret.</p>
+            <h2>Présentation du service :</h2>
+            <p>Chateau9 propose des services de création de sites web, de référencement et de marketing digital. Elle
+                accompagne ses clients dans la création de leur site web, dans le référencement de leur site sur les moteurs
+                de recherche et dans la mise en place de campagnes de marketing digital.</p>
+            
+            
             <h2>Les étapes de réalisation :</h2>
-            <ol>
-                <li>Création du cahier des charges</li>
                 <li>Création du design</li>
                 <li>Création de la base de données</li>
                 <li>Création du site web</li>
                 <li>Tests et validation</li>
                 <li>Déploiement</li>
-            </ol>
-            <h2>Le cahier des charges :</h2>
-            <p>Le cahier des charges est un document qui définit les besoins et les attentes du client. Il permet de
-                définir les objectifs du projet et de déterminer les contraintes techniques et fonctionnelles.</p>
-
-            <h2>Le design :</h2>
-            <p>Le design est la partie graphique du site web. Il permet de définir l’identité visuelle du site et de
-                créer une expérience utilisateur agréable.</p>
-            <h2>La base de données :</h2>
-            <p>La base de données est un ensemble de données structurées. Elle permet de stocker et de gérer les
-                informations du site web.</p>
-            <h2>Le site web :</h2>
-            <p>Le site web est la partie visible du projet. Il permet de présenter l’entreprise, ses services et ses
-                réalisations. Il permet également aux clients de contacter l’entreprise.</p>
-            <h2>Les tests et la validation :</h2>
-<p>Les tests permettent de vérifier le bon fonctionnement du site web. Ils permettent également de
-                détecter et de corriger les éventuelles erreurs.</p>
-            <h2>Le déploiement :</h2>
-            <p>Le déploiement est la mise en ligne du site web. Il permet de rendre le site accessible aux utilisateurs
-                sur internet.</p>
-            <btn class="btn" href="resources/doctechnique.pdf">Projet</btn>
+                                <btn class="btn" href="resources/doctechnique.pdf">Projet</btn>
             <h2>Conclusion :</h2>
             <p>Le stage s’est bien déroulé. J’ai réussi à atteindre les objectifs demandés. J’ai appris à travailler en
                 autonomie. J’ai également appris à utiliser de nouvelles technologies.</p>
