--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <a class="logo" target="_blank">
-        <img src="images/logo.png" alt="">
-    </a>
+
 
     <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
     <label for="menu-icon"></label>
@@ -22,6 +20,8 @@
             <li><a href="experience.html">Expérience</a></li>
 
             <li><a href="projets.html">Projets</a></li>
+            <li><a href="ordi.html">Stage 1</a></li>
+            <li><a href="chateau9.html">Stage 2</a></li>
             <li><a href="vielle.html">Veille</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
