--- a/ordi.html
+++ b/ordi.html
@@ -4,15 +4,12 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="style-menu.css">
 
     <title>Portfolio</title>
 </head>
 <body>
-    <a class="logo" target="_blank">
-        <img src="images/logo.png" alt="">
-    </a>
 
     <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
     <label for="menu-icon"></label>
@@ -24,59 +21,60 @@
             <li><a href="experience.html">Expérience</a></li>
 
             <li><a href="projets.html">Projets</a></li>
+            <li><a href="ordi.html">Stage 1</a></li>
+            <li><a href="chateau9.html">Stage 2</a></li>
             <li><a href="vielle.html">Veille</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </section>
-            <section class="">
-                <h1 class="">Fatima ABOUDA</h1>
+<section class="section">
+<div class="main-contenet">
+    <div class="container">
+        <div class="row">
+            <div class="section-title padd-15">
+                <h1>Fatima ABOUDA</h1>
                 <h2>Stage OrdiPointCom</h2>
-
-            </section>
-            <section>
-
-                        <h2>Introduction</h2>
+                <section>
+                    <h2>Introduction</h2>
                     <p>Dans le cadre de ma formation de BTS SIO,
                         j'ai effectué un stage de 4 semaines au sein de l'entreprise OrdiPointCom. Ce stage a pour but de mettre en pratique les
                         connaissances acquises au cours de ma formation et de découvrir le monde professionnel.
                     </p>
 
-<br><br>
-<strong>Objectifs du stage :</strong><br>
+<h2>Objectifs du stage :</h2>
 <ul>
     <li>Pratiquer les connaissances acquises au cours de ma formation</li>
     <li>Découvrir le monde professionnel</li>
     <li>Acquérir de nouvelles compétences</li>
     <li>Comprendre le fonctionnement d’une entreprise</li>
     <li>Comprendre le fonctionnement d’un service informatique</li>
-    <li><a href="resources/doc_technic.pdf">Documentation technique</a> </li>
 
 </ul>
+
 <br><br>
-<strong>Présentation de l'entreprise :</strong><br>
+<h2>Présentation de l'entreprise :</h2><br>
 OrdiPointCom est une entreprise qui propose des services de maintenance, réparation, configuration personnalisée, vente des ordinateurs portables, création de site Web et donne des conseils. Elle est située à Limoges.
 <br><br>
 <strong>Présentation du service :</strong><br>
-                        OrdiPointCom fait de la maintenance, la réparation, configuration personnalisée, vente des
+OrdiPointCom fait de la maintenance, la réparation, configuration personnalisée, vente des
                         ordinateurs
                         portables, creation de site Web et donne des conseils.
-                        <br><br>
                         Le service informatique d’OrdiPointCom est composé de 3 personnes :<br>
                     <ul>
                         <li>Un responsable du service informatique</li>
                         <li>Un technicien informatique(alternant)</li>
                         <li>Un stagiaire</li>
-                    </ul>
-                    <br><br>
-                        
-                        <br><br>
+                    </ul>                      
                         
                     </p>
-
-                    <div class="section-title">
-                        <h2>Présentation de l'Entreprise</h2>
-                    </div>
+                      <h2>Les étapes de réalisation :</h2>
+                <li>Création du design</li>
+                <li>Création de la base de données</li>
+                <li>Création du site web</li>
+                <li>Tests et validation</li>
+                <li>Déploiement</li>
+                                <btn class="btn" href="resources/doc_technic.pdf">Projet</btn>
                     <p>
                         <strong>Présentation générale :</strong><br>
                         OrdiPointCom<br>
