--- a/experience.html
+++ b/experience.html
@@ -6,13 +6,12 @@
     <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="style-menu.css">
     <link rel="stylesheet" href="style-timeline.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <title>Experience professionelle</title>
 </head>
 <body>
-    <a class="logo" target="_blank">
-        <img src="images/logo.png" alt="">
-    </a>
+
 
     <input class="menu-icon" type="checkbox" id="menu-icon" name="menu-icon"/>
     <label for="menu-icon"></label>
@@ -23,7 +22,7 @@
             <li><a href="about.html">A propos de moi</a></li>
             <li><a href="experience.html">Expérience</a></li>
             <li><a href="projets.html">Projets</a></li>
-            <li><a href="micro.html">Stage 1</a></li>
+            <li><a href="ordi.html">Stage 1</a></li>
             <li><a href="chateau9.html">Stage 2</a></li>
             <li><a href="vielle.html">Veille</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -115,6 +114,7 @@
                         </div>
                     </div>
                     <div class="experience padd-15">
+                        
                         <h3 class="title">EXPERIENCE</h3>
                         <div class="row">
                             <div class="timeline-box padd-15">
@@ -123,7 +123,7 @@
                                     <div class="timeline-item">
                                         <div class="circle-dot"></div>
                                         <h3 class="timeline-date">
-                                            <i class="fa fa-calendar"></i> 15/01/2024 – 08/03/2024
+                                            <i class="fa fa-calendar"></i>15/01/2024 – 08/03/2024
                                         </h3>
                                         <h4 class="timeline-title">Chateau9</h4>
                                         <i><strong>Chateauneuf-la-forêt, France</strong></i>
