--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                 <h2>Contactez-moi</h2>
             </div>
         </div>
-        <h3 class="contact-title padd-15">Avais-vous des questions?</h3>
+        <h3 class="contact-title padd-15">Avez-vous des questions?</h3>
         <h4 class="contact-sub-title padd-15">Je suis à votre disposition pour répondre à toutes vos questions</h4>
         <div class="row">
             <!-- ==== Contact info item Start ==== -->
