--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style1.css">
     <link rel="stylesheet" href="style-menu.css">
     <link rel="stylesheet" href="styles-contact.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <title>Portfolio</title>
 </head>
 
