--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h3 class="my-profession">je suis <span class="typing">Etudiante</span></h3>
                         <p>Explorez mes projets et découvrez mon parcours dans le développement web. Si vous souhaitez en
                             savoir plus sur moi, n'hésitez pas à me contacter.</p>
-                        <a href="cv-fati.pdf" class="btn">télécharger CV</a>
+                        <a href="resources/Fatima CV.pdf" class="btn">télécharger CV</a>
                 </div>
                 <div class="home-img padd-15">
                     <img src="images/aboutme.jpg" alt="img">
