--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
                                             </div>
                                             <div class="row">
                                                 <div class="buttons padd-15">
-                                                    <a href="cv.pdf" download="cv.pdf" class="btn">Télécharger CV</a>
+                                                    <a href="resources/Fatima CV.pdf" download="cv.pdf" class="btn">Télécharger CV</a>
                                                     <a href="contact.html" class="btn">Me contacter</a>                
                                                 </div>
                                             </div>
