--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="personal-info padd-15">
-                                        <h3>Informations personnelles</h3>
+                                        <h3>Informations personnel</h3>
                                         <div class="row">
                                             <div class="info-item padd-15">
                                                 <p>date de naissance : <span>27 oct 2003</span></p>
