--- a/chateau9.html
+++ b/chateau9.html
@@ -35,12 +35,10 @@
     <div class="container">
         <div class="row">
             <div class="section-title padd-15">
-        <h1>Fatima ABOUDA</h1>
         <h2>Stage Chateau9</h2>
 
         <section>
-            <h1>Chateau9</h1>
-            <h2>Création des sites WEB</h2>
+            <h2>Introduction</h2>
             <p>Chateau9 est une entreprise qui propose des services de création de sites web, de référencement et de
                 marketing digital. Elle est située à Chateauneuf la fôret.</p>
                 <p>Le site web est un outil de communication indispensable pour une entreprise. Il permet de présenter
@@ -79,7 +77,7 @@
                 <li>Création du site web</li>
                 <li>Tests et validation</li>
                 <li>Déploiement</li>
-                                <btn class="btn" href="resources/doctechnique.pdf">Projet</btn>
+                <a href="resources/doctechnique.pdf"><btn class="btn">Projet</btn></a>
             <h2>Conclusion :</h2>
             <p>Le stage s’est bien déroulé. J’ai réussi à atteindre les objectifs demandés. J’ai appris à travailler en
                 autonomie. J’ai également appris à utiliser de nouvelles technologies.</p>
@@ -87,27 +85,25 @@
             <p>Je tiens à remercier mon maître de stage, Mme.McLennan, pour m’avoir accueilli dans son entreprise et
                 pour m’avoir accompagné tout au long de mon stage.</p>
 
-            <h2>Contacts :</h2>
-            <p>
-
-            Chateau9
-            05 55 69 72 43
-            info@chateau9.com
-            2 avenue du 11 novembre 1918
-            87130 Châteauneuf-la-Forêt
-            </p>
-            <strong>Site Web de Chateau9 :</strong><br>
-            <a href="https://chateau9.com/">Chateau9</a><br>
-            <strong>tel :</strong><br>
-            05 55 69 72 43<br>
-            <strong>Adresse :</strong><br>
-            2 avenue du 11 novembre 1918<br>
-            87130 Châteauneuf-la-Forêt<br>
-            <strong>Mail :</strong><br>
-            info@chteau9.com<br>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2742.630742821434!2d1.584314315563032!3d45.69164397910494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
+                <h2>Presentation générale</h2>
+                <p>Chateau9</p>
+                <p>2 Avenue du 11 Novembre 1918, 87130 Châteauneuf-la-Forêt</p>
+                <p>05 55 69 72 43</p>
+                <p>info@chateau9.com</p>
+                <p>www.chateau9.com</p>
+                <strong>Localisation</strong>
+                <br>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2742.630742821434!2d1.584314315563032!3d45.69164397910494!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
             1!3m3!1m2!1s0x47fcbf1b0b0b0b0b%3A0x9e9b6b0b0b0b0b0!2s2%20Avenue%20du%2011%20Novembre%201918%2C%2087130%20Ch%C3%A2teauneuf-la-For%C3%AAt!5e0!3m2!1sfr!2sfr!4v1622124114119!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <br><br>
+
+            <strong>Horaires d'ouverture</strong>
+            <p>Lundi : 9h-12h / 14h-18h</p>
+            <p>Mardi : 9h-12h / 14h-18h</p>
+            <p>Mercredi : 9h-12h / 14h-18h</p>
+            <p>Jeudi : 9h-12h / 14h-18h</p>
+            <p>Vendredi : 9h-12h / 14h-18h</p>
+    
         </section>
 </div>
     </body>
