--- a/ordi.html
+++ b/ordi.html
@@ -33,7 +33,6 @@
     <div class="container">
         <div class="row">
             <div class="section-title padd-15">
-                <h1>Fatima ABOUDA</h1>
                 <h2>Stage OrdiPointCom</h2>
                 <section>
                     <h2>Introduction</h2>
@@ -41,42 +40,38 @@
                         j'ai effectué un stage de 4 semaines au sein de l'entreprise OrdiPointCom. Ce stage a pour but de mettre en pratique les
                         connaissances acquises au cours de ma formation et de découvrir le monde professionnel.
                     </p>
+                    <h2>Objectifs du stage :</h2>
+                    <ul>
+                        <li>Pratiquer les connaissances acquises au cours de ma formation</li>
+                        <li>Découvrir le monde professionnel</li>
+                        <li>Acquérir de nouvelles compétences</li>
+                        <li>Comprendre le fonctionnement d’une entreprise</li>
+                        <li>Comprendre le fonctionnement d’un service informatique</li>
+                    </ul>
+                    <h2>Présentation de l'entreprise :</h2>
+                    <p>OrdiPointCom est une entreprise qui propose des services de maintenance, réparation, configuration personnalisée, vente des ordinateurs portables, création de site Web et donne des conseils. Elle est située à Limoges.
 
-<h2>Objectifs du stage :</h2>
-<ul>
-    <li>Pratiquer les connaissances acquises au cours de ma formation</li>
-    <li>Découvrir le monde professionnel</li>
-    <li>Acquérir de nouvelles compétences</li>
-    <li>Comprendre le fonctionnement d’une entreprise</li>
-    <li>Comprendre le fonctionnement d’un service informatique</li>
-
-</ul>
-
-<br><br>
-<h2>Présentation de l'entreprise :</h2><br>
-OrdiPointCom est une entreprise qui propose des services de maintenance, réparation, configuration personnalisée, vente des ordinateurs portables, création de site Web et donne des conseils. Elle est située à Limoges.
-<br><br>
-<strong>Présentation du service :</strong><br>
-OrdiPointCom fait de la maintenance, la réparation, configuration personnalisée, vente des
+                    </p>
+                    <h2>Présentation du service :</h2>
+                    
+                    <p>OrdiPointCom fait de la maintenance, la réparation, configuration personnalisée, vente des
                         ordinateurs
                         portables, creation de site Web et donne des conseils.
-                        Le service informatique d’OrdiPointCom est composé de 3 personnes :<br>
+                        Le service informatique d’OrdiPointCom est composé de 3 personnes :</p>
                     <ul>
                         <li>Un responsable du service informatique</li>
                         <li>Un technicien informatique(alternant)</li>
                         <li>Un stagiaire</li>
                     </ul>                      
                         
-                    </p>
                       <h2>Les étapes de réalisation :</h2>
-                <li>Création du design</li>
-                <li>Création de la base de données</li>
-                <li>Création du site web</li>
-                <li>Tests et validation</li>
-                <li>Déploiement</li>
-                                <btn class="btn" href="resources/doc_technic.pdf">Projet</btn>
-                    <p>
-                        <strong>Présentation générale :</strong><br>
+                      <li>Création du design</li>
+                      <li>Création de la base de données</li>
+                      <li>Création du site web</li>
+                      <li>Tests et validation</li>
+                      <li>Déploiement</li>
+                      <a  href="resources/doc_technic.pdf"><btn class="btn">Projet</btn></a>
+                        <h2>Présentation générale :</h2>
                         OrdiPointCom<br>
                         101 rue de Babylone, 8700 Limoges<br> 
                         <a href="https://ordipointcom.net/">Site Web de Micro Rezo</a><br>
