--- a/projets.html
+++ b/projets.html
@@ -40,7 +40,7 @@
         </div>
         <div class="row">
             <div class="portfolio-heading padd-15">
-                <h2>My Last Projects : </h2>
+                <h2>Mes projets : </h2>
 
             </div>
             <div class="row">
