--- a/vielle.html
+++ b/vielle.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style-menu.css">
-    <link rel="stylesheet" href="style-veille.css">
     <link rel="stylesheet" href="style1.css">
     <title>Portfolio</title>
     <style>
@@ -56,12 +55,7 @@
         <div class="container">
             <div class="row">
                 <div class="section-title padd-15">
-                    <h1>Fatima ABOUDA</h1>
                     <h2>La Veille Technologique</h2>
-                </div>
-            </div>
-    <h1>La Veille Technologique</h1>
-    <section class="veille">
     <h2>Qu'est-ce que la Veille Technologique ?</h2>
     <p>La veille technologique est le processus de surveillance des tendances technologiques pour identifier les
         opportunités et les menaces potentielles. Les entreprises utilisent la veille technologique pour obtenir un
@@ -99,27 +93,7 @@
     <p>Il existe de nombreux outils et ressources pour suivre les dernières tendances en matière de développement
         informatique. Voici quelques-uns des plus populaires :</p>
         <div class="tool-container">
-        <div class="tool-box">
-        <div class="tool">
-            <img src="images/codepen.jpg" alt="">
-            <br>
-            <strong>CodePen :</strong>
-            <p>CodePen est une plateforme communautaire pour tester et partager des codes HTML, CSS et JavaScript.</p>
-            <p>CodePen est un outil très utile pour tester des codes et partager des codes avec des amis</p>
-            <a href="https://codepen.io/">CodePen</a>
-        </div>
-            </div>
-            <div class="tool-box">
-
-                <div class="tool">
-                    <img src="images/fbinsta.jpg" alt="">
-                    <br>
-                    <strong>Réseaux Sociaux :</strong>
-                    <p>Être actif sur des plateformes comme Twitter et LinkedIn pour suivre des experts et des entreprises du
-                        secteur.</p>
-                    <p>les reseaux sociaux sont les plus grand formes d'information on peut avoir tous sur les reseauc sociaux suivre des pages d'information sur le developpement comme <a href="https://www.instagram.com/frenchcoder/?hl=fr">frenshcoder</a> </p>
-                </div>
-            </div>
+        
 
         </div>
     <div class="tool-container">
@@ -131,19 +105,43 @@
                 <strong>Medium :</strong>
                 <p>Lire des articles sur Medium pour découvrir les dernières tendances et les meilleures pratiques.</p>
                 <p>par exemples pour les injection SQL en cybersécurite j'ai utilisé cette source </p>
-                <a href="https://tanvitrivedi.medium.com/sql-injection-in-mutillidae-af0411367949">Injection SQL</a>
+                <a class="btn2" href="https://tanvitrivedi.medium.com/sql-injection-in-mutillidae-af0411367949">Injection SQL</a>
 
             </div>
         </div>
         <div class="tool-box">
-        <div class="tool">
-            <img src="images/github.png" alt="">
-            <br>
-            <strong>GitHub :</strong>
-            <p>Explorer les projets et les codes sources sur GitHub pour apprendre des meilleures pratiques.</p>
-            <p>durant mon stage de l'année derniere je devais faire un generateur <a href="https://github.com/AntonTyutin/fpdf">pdf</a> en php github m'as aider avec les ressources partagé par les autre et aussije peux stocké mes cours dedans créer des branches partagé avec mes amis pour poursuivre les modification de chacun d'entre nous quand on est en groupe </p>
+            <div class="tool">
+                <img src="images/github.png" alt="">
+                <br>
+                <strong>GitHub :</strong>
+                <p>Explorer les projets et les codes sources sur GitHub pour apprendre des meilleures pratiques.</p>
+                <p>durant mon stage de l'année derniere je devais faire un generateur <a class="btn2" href="https://github.com/AntonTyutin/fpdf">pdf</a> en php github m'as aider avec les ressources partagé par les autre et aussije peux stocké mes cours dedans créer des branches partagé avec mes amis pour poursuivre les modification de chacun d'entre nous quand on est en groupe </p>
+            </div>
         </div>
-    </div></div>
+        <div class="tool-box">
+            <div class="tool">
+                <img src="images/stack-overflow.png" alt="">
+                <br>
+                <strong>Stack Overflow :</strong>
+                <p>Poser des questions et trouver des réponses sur Stack Overflow pour résoudre des problèmes de
+                    programmation.</p>
+                <p>par exemple pour IntelliJ résoudre la méthode println(java.lang.String) j'ai utilisé cette source </p>
+                <a class="btn2"
+                    href="https://stackoverflow.com/questions/38634766/intellij-system-out-println-cannot-resolve-method-printlnjava-lang-string">Iprintln(java.lang.String)</a>
+            </div>
+            </div>
+
+        <div class="tool-box">
+            <div class="tool">
+                <img src="images/grafikart.png" alt="">
+                <br>
+                <strong>grafikart</strong>
+                <p>Apprendre les dernières technologies web et mobiles avec des tutoriels vidéo sur Grafikart.</p>
+                <p>par exemple suivre ce cursus j'ai utilisé cette source </p>
+                <a class="btn2" href="https://grafikart.fr/cursus">cursus</a>
+                </div>
+                </div>
+</div>
 
 
     <h2>Conclusion :</h2>
