--- a/chateau9.html
+++ b/chateau9.html
@@ -17,17 +17,29 @@
     <label for="menu-icon"></label>
 
     <nav class="nav">
+        <div class="nav-logo">
+            <a href="index.html">
+                Fatima Abouda
+            </a>
+        </div>
         <ul class="pt-5">
+    
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="about.html">A propos de moi</a></li>
+            <li><a href="about.html">À propos de moi</a></li>
             <li><a href="experience.html">Expérience</a></li>
-
             <li><a href="projets.html">Projets</a></li>
-            <li><a href="ordi.html">Stage 1</a></li>
-            <li><a href="chateau9.html">Stage 2</a></li>
+            <li><a href="competences.html">Compétences</a></li>
+            <li>
+                <a href="#">Stages</a>
+                <ul class="submenu">
+                    <li><a href="ordi.html">Stage 1</a></li>
+                    <li><a href="chateau9.html">Stage 2</a></li>
+                </ul>
+            </li>
             <li><a href="vielle.html">Veille</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
+    
     </nav>
 </section>
 
